[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/main.tres" type="DynamicFont" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://assets/green_sliderDown.png" type="Texture" id=3]
[ext_resource path="res://assets/kenvector_future_thin.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.321569, 0.909804, 0.329412, 1 )

[sub_resource type="Theme" id=3]
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0.0666667, 0.219608, 0.666667, 0.501961 )
Label/styles/normal = SubResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 31
outline_size = 2
outline_color = Color( 0.764706, 0.435294, 0.239216, 1 )
use_filter = true
font_data = ExtResource( 4 )

[node name="main" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 60.0
mouse_filter = 1
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 593.0
margin_bottom = 957.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 586.0
margin_bottom = 45.0
grow_horizontal = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 494.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "True wind"
align = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 498.0
margin_right = 546.0
margin_bottom = 45.0
text = "setup"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 550.0
margin_right = 586.0
margin_bottom = 45.0
text = "exit"

[node name="TrueWind" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 586.0
margin_bottom = 85.0
theme = SubResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Wind Direction: 5, speed: 10"
align = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 586.0
margin_bottom = 93.0

[node name="ShipSpeed" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 97.0
margin_right = 586.0
margin_bottom = 306.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ShipSpeed"]
margin_right = 586.0
margin_bottom = 45.0
hint_tooltip = "Vessel speed in knots 1 knots = 1,852 km/h"
mouse_filter = 0
mouse_default_cursor_shape = 16
custom_fonts/font = ExtResource( 1 )
text = "Ship speed: 5 knots"

[node name="HSliderShipSpeed" type="HSlider" parent="MarginContainer/VBoxContainer/ShipSpeed"]
margin_top = 49.0
margin_right = 586.0
margin_bottom = 91.0
custom_icons/tick = ExtResource( 3 )
custom_icons/grabber_disabled = ExtResource( 3 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
max_value = 20.0
step = 0.1
value = 2.0

[node name="ShipCourse" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 310.0
margin_right = 586.0
margin_bottom = 519.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ShipCourse"]
margin_right = 586.0
margin_bottom = 45.0
hint_tooltip = "Ship's course in degrees"
mouse_filter = 0
mouse_default_cursor_shape = 16
custom_fonts/font = ExtResource( 1 )
text = "Ship course: 1 deg"

[node name="HSliderShipCourse" type="HSlider" parent="MarginContainer/VBoxContainer/ShipCourse"]
margin_top = 49.0
margin_right = 586.0
margin_bottom = 91.0
custom_icons/tick = ExtResource( 3 )
custom_icons/grabber_disabled = ExtResource( 3 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
max_value = 360.0
value = 5.0

[node name="WindSpeed" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 523.0
margin_right = 586.0
margin_bottom = 732.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/WindSpeed"]
margin_right = 586.0
margin_bottom = 45.0
hint_tooltip = "Wind speed in meters per second"
mouse_filter = 0
mouse_default_cursor_shape = 16
custom_fonts/font = ExtResource( 1 )
text = "Wind speed: 3 m/s"

[node name="HSliderWindSpeed" type="HSlider" parent="MarginContainer/VBoxContainer/WindSpeed"]
margin_top = 49.0
margin_right = 586.0
margin_bottom = 91.0
custom_icons/tick = ExtResource( 3 )
custom_icons/grabber_disabled = ExtResource( 3 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
max_value = 30.0
step = 0.1
value = 5.0

[node name="WindDirection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 736.0
margin_right = 586.0
margin_bottom = 946.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/WindDirection"]
margin_right = 586.0
margin_bottom = 45.0
hint_tooltip = "Angle with respect to the diametrical 
plane of the left and right sides of 
the vessel, ranging from 0 to 180 degrees
 and pointing towards the object, in this case,
 the direction of the apparent wind."
mouse_filter = 0
mouse_default_cursor_shape = 16
custom_fonts/font = ExtResource( 1 )
text = "Wind direction: 0 deg"

[node name="HSliderWindDirection" type="HSlider" parent="MarginContainer/VBoxContainer/WindDirection"]
margin_top = 49.0
margin_right = 586.0
margin_bottom = 91.0
custom_icons/tick = ExtResource( 3 )
custom_icons/grabber_disabled = ExtResource( 3 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
min_value = -180.0
max_value = 180.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 950.0
margin_right = 586.0
margin_bottom = 950.0

[node name="PopupDialog" type="PopupDialog" parent="MarginContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 593.0
margin_bottom = 957.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PopupDialog/VBoxContainer"]
margin_right = 586.0
margin_bottom = 122.0

[node name="Label" type="Label" parent="MarginContainer/PopupDialog/VBoxContainer/VBoxContainer"]
margin_right = 586.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 1 )
text = "max ship speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="MarginContainer/PopupDialog/VBoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 586.0
margin_bottom = 122.0
custom_fonts/font = ExtResource( 1 )
text = "20"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/PopupDialog/VBoxContainer"]
margin_top = 126.0
margin_right = 586.0
margin_bottom = 248.0

[node name="Label" type="Label" parent="MarginContainer/PopupDialog/VBoxContainer/VBoxContainer2"]
margin_right = 586.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 1 )
text = "max wind speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="MarginContainer/PopupDialog/VBoxContainer/VBoxContainer2"]
margin_top = 58.0
margin_right = 586.0
margin_bottom = 122.0
custom_fonts/font = ExtResource( 1 )
text = "35"

[node name="ButtonSafe" type="Button" parent="MarginContainer/PopupDialog/VBoxContainer"]
margin_top = 252.0
margin_right = 586.0
margin_bottom = 312.0
custom_fonts/font = ExtResource( 1 )
text = "safe"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/ShipSpeed/HSliderShipSpeed" to="." method="_on_HSliderShipSpeed_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/ShipCourse/HSliderShipCourse" to="." method="_on_HSliderShipCourse_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/WindSpeed/HSliderWindSpeed" to="." method="_on_HSliderWindSpeed_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/WindDirection/HSliderWindDirection" to="." method="_on_HSliderWindDirection_value_changed"]
[connection signal="pressed" from="MarginContainer/PopupDialog/VBoxContainer/ButtonSafe" to="." method="_on_ButtonSafe_pressed"]
